<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/currently_near"
            android:id="@+id/lbl_near"
            android:layout_gravity="left|center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/room_name"
            android:layout_gravity="left|center_horizontal"/>

        <ImageView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:minHeight="200dp"
            android:contentDescription="@string/content_desc_floor_map"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/room_information"
            android:id="@+id/lbl_room_info"
            android:layout_gravity="left|center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:paddingBottom="112dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/room_info" />

    </LinearLayout>
</ScrollView>